tests/valid/definite/RealConst_Valid_1.whiley
void System::main([string] args):
    real x = 12376523476123.98712345
    x = x + 0.002348976
    print str(x)
