tests/invalid/simple/VarDecl_CompileFail_5.whiley
void System::main([string] args):
    real y = 2.02343
    int x = y
    print str(x)
